src/assets/css/tailwind.css
/* src/assets/css/tailwind.css*/
@tailwind base;
@tailwind components;
@tailwind utilities;

h1, h2, h3, h4, h5, h6, body {
	@apply font-sans font-thin;
}

main h1 {
	@apply text-4xl;
}

a {
	@apply text-linkblue underline;
}

h2 > a { @apply text-black no-underline }

.gigantor figure, .gigantor figcaption, .gigantor img {
	width: 100vw;
	position: relative;
	left: 50%;
	right: 50%;
	margin-left: -50vw;
	margin-right: -50vw;
}

.gigantor img {
	max-width : none;
	z-index: 0
}

.gigantor figcaption {
	@apply p-3 text-slate-600 text-xs
}

figcaption {
	@apply pt-3 text-slate-600 text-xs
}

figcaption span:first-child:before { content : '⇡'; margin-right : 5px; color : #888; }
figcaption span:not(:empty) { @apply pr-2}
figcaption span:not(:first-child):not(:empty) {	
	@apply pl-2;
	border-left : black solid 1px
}
figcaption span:last-child { color : #aaa; }

.post-content ul li, .hire-me ul li { margin-bottom : 6px;}
.post-content ul li:before, .hire-me ul li:before {
	float : left; content : '⇢';
	margin-right : 10px;
}

.contactbar {
	@apply space-x-3;
}

.contactbar > div { 
	@apply mt-3;
}

.contactbar > div > a {
	@apply no-underline bg-blue-500 rounded-full px-5 py-2 text-white shadow-md;
}

.contactbar > div:nth-child(2) > a {
	@apply bg-slate-500;
}

.contactbar > div:nth-child(2) > a:before {
	content : url(/assets/images/weirdopit.svg);
	height : 15px;
	width : 15px;
	display : inline-block;

	@apply mr-2;
}

.contactbar > div:nth-child(3) > a {
	@apply bg-white text-black border-black border border-slate-200;
}

.contactbar > div:nth-child(3) > a:before {
	content : '⇠';
	display : inline-block;
	margin-left : -3px;
	@apply mr-2;
}

